fix the z-index problem of overlaping the edit member btn on top of the edit dialogue

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -221,7 +221,7 @@ main {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 9;
+  z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
